Changed class Loader